Report: Analysis Section Completed

--- a/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
+++ b/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
@@ -17,7 +17,7 @@
     "## I. Definition\n",
     "\n",
     "### Project Overview\n",
-    "The main objective for this project is to be capable to predict the <b>price of a given set stock</b> in a future time interval in days. In order to achieve the goal, Machine Learning techniques will be applied on the historical <b>adjusted close prices</b> for different stocks.\n",
+    "<p>The main objective for this project is to be capable to predict the <b>price of a given set stock</b> in a future time interval in days. In order to achieve the goal, Machine Learning techniques will be applied on the historical <b>adjusted close prices</b> for different stocks. </p>\n",
     "\n",
     "#### What is a stock?\n",
     "\n",
@@ -54,23 +54,25 @@
     "#### The beginning <br>\n",
     "\n",
     "<p>Back in the 15th century people already negotiated foreign currencies and valuable metals. At that time, some stock exchanges were created in Europe such as the \"bourse\" of Antwerp in Belgium (1561) and The Royal Exchange in England (1571).\n",
-    "The Dutch East India Company in Netherlands issued the first known stock certificate in 1606. This company traded spices between Amsterdam and East India (Indonesia) and operated similarly companies operate nowadays, with directors controlling company's operations and shareholders receiving a dividend of 16% per year. As the company issued shares on paper, investors also began to sell their shares to other investors. [2] </p><br>\n",
+    "The Dutch East India Company in Netherlands issued the first known stock certificate in 1606. This company traded spices between Amsterdam and East India (Indonesia) and operated similarly companies operate nowadays, with directors controlling company's operations and shareholders receiving a dividend of 16% per year. As the company issued shares on paper, investors also began to sell their shares to other investors. [2] </p>\n",
     "<p>In the United States, the fisrt stock price was established in Philadelphia in 1790 and was called \"The Board of Brokers\". Now it is a part of NASDAQ, known as NASDAQ OMX PHLX. \n",
-    "Shortly after the establisment of the Philadelphia Stock Exchange, the stock markert started to grow in New York, moved by 24 stock brokers outside of 68 Wall Street. As the market became more structured, in 1817 the New York Stock and Exchange Board was established.[2] </p> <br>\n",
+    "Shortly after the establisment of the Philadelphia Stock Exchange, the stock markert started to grow in New York, moved by 24 stock brokers outside of 68 Wall Street. As the market became more structured, in 1817 the New York Stock and Exchange Board was established.[2] </p>\n",
     "\n",
     "\n",
     "### Problem Statement\n",
-    "Given historical data for different stocks, is it possible to predict those stock prices for the future?\n",
-    "In order to implement this task, a data set with the <b>adjusted closed prices</b> is needed.<b>Adjusted closed prices</b> adjusts the close prices based on corporate actions (described in previous section) <br>\n",
-    "We will also calculate some <i>techinical indicators</i> [7] for data, using them as input for the model. The following indicators are calculated: <br>\n",
     "\n",
+    "<p>Given historical data for different stocks, is it possible to predict those stock prices for the future?\n",
+    "In order to implement this task, a data set with the <b>adjusted closed prices</b> is needed.<b>Adjusted closed prices</b> adjusts the close prices based on corporate actions (described in previous section) <br>\n",
+    "We will also calculate some <i>techinical indicators</i> [7] for data, using them as input for the model. The following indicators are calculated: </p>\n",
+    "<p>\n",
     "<b>Overlap Studies</b> <br>\n",
     "<ul>\n",
     "  <li>Bollinger Bands [7]</li>\n",
     "  <li>Exponential Moving Average (EMA) [8]</li>\n",
     "  <li>Simple Moving Average (SMA) [9]</li>\n",
     "</ul>  \n",
-    "\n",
+    "</p>\n",
+    "<p>\n",
     "<b>Momentum Indicators</b>\n",
     "<ul>\n",
     "  <li>Moving Average Convergence/Divergence (MACD) [10]</li>\n",
@@ -78,44 +80,47 @@
     "  <li>Relative Strength Index (RSI) [12]</li>\n",
     "</ul> \n",
     "<br>\n",
+    "</p>\n",
     "\n",
-    "For those tasks, TA-LIB library (http://mrjbq7.github.io/ta-lib/) will be used. <br>\n",
-    "\n",
+    "<p>For those tasks, TA-LIB library (http://mrjbq7.github.io/ta-lib/) will be used. <br> </p>\n",
+    "<p>\n",
     "Thus the expected input for the <b>training algorithm</b> is: <br>\n",
     "<ul>\n",
     "  <li>A list of trade dates with its respectly adjusted closing price</li>\n",
     "  <li>A set of technical indicators calculated based on the input list described above.</li>\n",
     "</ul> \n",
-    "<br>\n",
-    "The expected input for the <b>Predictor</b> is: <br>\n",
+    "</p>\n",
+    "\n",
+    "<p>The expected input for the <b>Predictor</b> is: <br>\n",
     "A list of stock symbols (aka companies tickers) and the number of days n ahead the price should be preditect.\n",
-    "<b>The expected output</b> is the price for each stock after n days. <br>\n",
+    "<b>The expected output</b> is the price for each stock after n days. </p>\n",
     "\n",
     "#### Problem Domain\n",
-    "Since the problem consists in <b> to estimate the value </b> of future prices, which are <b>continuous quantitative data</b>, <b>a regressor is the right tool</b> to try to achieve this goal.\n",
+    "<p>Since the problem consists in <b> to estimate the value </b> of future prices, which are <b>continuous quantitative data</b>, <b>a regressor is the right tool</b> to try to achieve this goal. </p>\n",
     "\n",
-    "Althougth there are some challenges to tackle:\n",
+    "<p>Althougth there are some challenges to tackle:\n",
     "<ul>\n",
     "  <li>Missing price values for different stocks and as well as in different dates</li>\n",
     "  <li>Training cost, since there will be a fairly amount of historical data (almost 18 years)</li>\n",
     "  <li>Response time: The algorithm should return an answer in a feasibile time</li>\n",
     "  <li>Feature Engineering: Which features should be used?</li>\n",
     "  <li>The estimative itself: Since the market is a very uncertain environment, how to fit a regressor in order to estimate stock prices?</li>\n",
-    "</ul> \n",
+    "</ul> </p>\n",
     "\n",
     "#### Task List\n",
-    "In order to successfully estimate the prices, the following tasks are required:\n",
+    "<p>In order to successfully estimate the prices, the following tasks are required:\n",
     "<ul>\n",
     "    <li>Download pricing data regarding the symbols queried</li>\n",
     "    <li>Clean Data, which includes some strategy to fill missing values</li>\n",
     "    <li>Calculate different technical indicators on data over the time</li>\n",
     "    <li> Perform a model tuning in order to have the best model amongst different initial setups</li>\n",
-    "</ul>\n",
-    "<br>\n",
-    "### Metrics\n",
-    "Since the proposed solution for this problem is a regression, the model metric chosen is the <b>coefficient of determination, also known as $R^2$ Score</b>. <br>\n",
+    "</ul></p>\n",
+    "\n",
+    "### Metrics \n",
+    "<p>Since the proposed solution for this problem is a regression, the model metric chosen is the <b>coefficient of determination, also known as $R^2$ Score</b>. <br>\n",
     "The coefficient of determination is widely used to evaulate the goodness of fit of a model. It explains how well the predictions os a model approximates to the real data. <br>\n",
-    "$R^2$ Score is scaled from 0 to 1, which 1 indicating a perfect fit of the model to data.\n"
+    "$R^2$ Score is scaled from 0 to 1, which 1 indicating a perfect fit of the model to data. </p>\n",
+    "<p> The <b>Mean Squared Error (MSE) </b> will also be computed, but only for comparision reasons. </p>"
    ]
   },
   {
@@ -1363,8 +1368,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data shows that USIM5 has the highest number of missing values, which explains why it has lower counting value than ABEV3, for instance."
+    "Data shows that USIM5 has the highest number of missing values, which explains why it has lower counting value than ABEV3, for instance. <br>\n",
+    "\n",
+    "### Algorithm and Techiniques\n",
+    "As mentioned earlier, this is a <br> regression problem </b>. Hence, we are looking for models which approximate functions.\n",
+    "The following models may be considered (from simplest to the more complex):\n",
+    "<ol>\n",
+    "    <li><b>Generelized Linear Models</b> </li>\n",
+    "    <p> The simplest type of models, they are used when the result is expected to be a linear combination of the input. [13] </p>\n",
+    "    <li><b>Support Vector Machines with non-linear kernels</b> </li>\n",
+    "    <p> Support Vector Machines (SVM) and kernels provide us the ability of trying to fit data in a non-linear regression model.\n",
+    "        SVMs are very effective on High Dimensional Data and they are memory efficient as well. [14] </p>\n",
+    "</ol>\n",
+    "<br>\n",
+    "<p>Usually, the more complex the model is, the more is the likelihood of overfitting. Moreover, more complex models usually tends to take more on training. Thus, the models used in this work will be chosen from the <b>Generelized Linear Models</b>. </p>\n",
+    "<p> The following models will be trained and tested</p>\n",
+    "<ul>\n",
+    "    <li>Ordinary Least Squares [15]</li>\n",
+    "    <li>Ridge Regression [16] </li>\n",
+    "    <li>Lasso [17] </li>\n",
+    "    <li>Elastic Net [18] </li>\n",
+    "    <li>Huber Regression [19] </li>\n",
+    "</ul>\n",
+    "\n",
+    "<p>Before fitting the models, the input data will be preprocessed in order to handle missing values. Preprocessing also includes normalizing ajuseted close prices and calculating the techincal indicators described earlier. <br>\n",
+    "One more step is to tune the model in order to find the best parameters for each. A Grid Search routine will perform this task as well as perform the model cross validation. </p>\n",
+    "<p> The final step is test the model predicting prices for 1, 7, 15, 30, 60 and 120 days ahead. </p>\n",
+    "\n",
+    "### Benchmark\n",
+    "<p><b> Relative Error (also known as Approximation Error) </b> [20] will be used as benchmark for the predicted prices. \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1384,17 +1423,16 @@
     "[9]: https://www.investopedia.com/terms/s/sma.asp (Accessed in 2017-12-26) <br>\n",
     "[10]: https://www.investopedia.com/terms/m/macd.asp (Accessed in 2017-12-26) <br>\n",
     "[11]: https://www.investopedia.com/terms/m/momentum.asp (Accessed in 2017-12-26) <br>\n",
-    "[12]: https://www.investopedia.com/terms/r/rsi.asp (Accessed in 2017-12-26) <br>"
+    "[12]: https://www.investopedia.com/terms/r/rsi.asp (Accessed in 2017-12-26) <br>\n",
+    "[13]: http://scikit-learn.org/stable/modules/linear_model.html (Accessed in 2017-12-27) <br>\n",
+    "[14]: http://scikit-learn.org/stable/modules/svm.html (Accessed in 2017-12-27) <br>\n",
+    "[15]: http://scikit-learn.org/stable/modules/linear_model.html#ordinary-least-squares (Accessed in 2017-12-27) <br>\n",
+    "[16]: http://scikit-learn.org/stable/modules/linear_model.html#ridge-regression (Accessed in 2017-12-27) <br>\n",
+    "[17]: http://scikit-learn.org/stable/modules/linear_model.html#lasso (Accessed in 2017-12-27) <br>\n",
+    "[18]: http://scikit-learn.org/stable/modules/linear_model.html#elastic-net (Accessed in 2017-12-27) <br>\n",
+    "[19]: http://scikit-learn.org/stable/modules/linear_model.html#huber-regression (Accessed in 2017-12-27) <br>\n",
+    "[20]: https://en.wikipedia.org/wiki/Approximation_error (Accessed in 2017-12-27)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
